# cg-poligonos

./: CMakeLists.txt  README.md
include/: Camara.h  Poligono.h  PoligonoFactory.h  PoligonoIrregular.h  PoligonoRegular.h  Punto.h  Shader.h  Triangulo.h  Ventana.h  VentanaCore.h  VentanaLegacy.h
src/: Camara.cpp  Poligono.cpp  PoligonoFactory.cpp  PoligonoIrregular.cpp  PoligonoRegular.cpp  Punto.cpp  Shader.cpp  Triangulo.cpp  Ventana.cpp  VentanaCore.cpp  VentanaLegacy.cpp  main.cpp  main_core.cpp  main_dual.cpp  main_helpers.cpp  main_legacy.cpp
test/: TestTriangulo.cpp
test/Poligono/: TestPoligono.cpp
test/PoligonoFactory/: TestPoligonoFactory.cpp
test/PoligonoIrregular/: TestPoligonoIrregular.cpp
test/PoligonoRegular/: TestPoligonoRegular.cpp
test/Punto/: TestPunto.cpp
test/TestPoligonoIrregular/: TestPoligonoIrregular.cpp
test/Triangulo/: TestTriangulo.cpp
